--- a/pages/Priority 1- Tackling the cost of living crisis.ipynb
+++ b/pages/Priority 1- Tackling the cost of living crisis.ipynb
@@ -66,9 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'merged_wd_oa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m   deprivation_oa\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlbth_census_2021_deprivation_oa.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#merge deprivation data with spatial data\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m deprivation_merge\u001b[38;5;241m=\u001b[39mmerge_spatial_data(\u001b[43mmerged_wd_oa\u001b[49m, deprivation_oa,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOA21CD\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGEOGRAPHY_CODE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'merged_wd_oa' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#read in deprivation by oa dataset\n",
     "\n",
@@ -80,6 +92,35 @@
     "\n",
     "#merge deprivation data with spatial data\n",
     "deprivation_merge=merge_spatial_data(merged_wd_oa, deprivation_oa,\"OA21CD\", \"GEOGRAPHY_CODE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'merged_wd_oa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m   deprivation_oa_2011 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.nomisweb.co.uk/api/v01/dataset/NM_519_1.data.csv?date=latest&geography=1254117467...1254118025,1254259398...1254259586&rural_urban=0&c_deprived=1...5&measures=20100\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#merge deprivation data with spatial data\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m deprivation_merge_2011\u001b[38;5;241m=\u001b[39mmerge_spatial_data(\u001b[43mmerged_wd_oa\u001b[49m, deprivation_oa_2011,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOA21CD\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGEOGRAPHY_CODE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'merged_wd_oa' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#read in deprivation by oa dataset\n",
+    "\n",
+    "try:\n",
+    "  deprivation_oa_2011 = pd.read_csv('lbth_census_2011_deprivation_oa.csv')\n",
+    "except:\n",
+    "  deprivation_oa_2011 = pd.read_csv('https://www.nomisweb.co.uk/api/v01/dataset/NM_519_1.data.csv?date=latest&geography=1254117467...1254118025,1254259398...1254259586&rural_urban=0&c_deprived=1...5&measures=20100')\n",
+    "\n",
+    "#merge deprivation data with spatial data\n",
+    "deprivation_merge_2011=merge_spatial_data(merged_wd_oa, deprivation_oa_2011,\"OA21CD\", \"GEOGRAPHY_CODE\")"
    ]
   },
   {
@@ -140,6 +181,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace multiple substrings\n",
+    "\n",
+    "deprivation_2011= deprivation_2011.apply(lambda x: x.replace({'one':'1','two': '2',\n",
+    "    'three': '3','four': '4'},regex=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -147,20 +200,6 @@
     "#concatenate 2011 and 2021 dataframes \n",
     "\n",
     "deprivation_2011_2021=pd.concat([deprivation_2011,deprivation_2021])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Replace multiple substrings\n",
-    "\n",
-    "deprivation_2011_2021= deprivation_2011_2021.apply(lambda x: x.replace({'one':'1','two': '2',\n",
-    "    'three': '3','four': '4'},regex=True))"
    ]
   },
   {
@@ -262,6 +301,8 @@
     "        col1, col2=st.columns(2)\n",
     "        with col1:\n",
     "         plot_wards(deprivation_merge,column='C2021_DEP_6_NAME', string='Household is not deprived in any dimension',agg='mean',\n",
+    "         title='Percentage of Households')\n",
+    "         plot_wards(deprivation_merge_2011),column='C2021_DEP_6_NAME', string='Household is not deprived in any dimension',agg='mean',\n",
     "         title='Percentage of Households')\n",
     "        with col2:\n",
     "         trendline(any_dimension)\n",
